--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ table {width:70%;}
 
 @media (max-width: 768px) {
 	{float:none; text-align: center; 
-		width:100%;
+		width:100%; font-size: 25px;
 }
 
 
